Dashboard Stats card: Footer buttons markup fix.
The buttons overflow each other on certain window sizes. When the card gets too narrow, the 'Activate brute force...' button doesn't fit into the 50% width of the card dedicated to it.
I adjusted the styles so the button would be able to overflow beyond 50% of the card, and if the two buttons do not fit, one of them gets pushed down to the next line.

--- a/_inc/client/dashboard-widget/style.scss
+++ b/_inc/client/dashboard-widget/style.scss
@@ -130,19 +130,20 @@
 
 	footer {
 		background: #fafafa;
-		padding: .75em;
+		padding: .75em .75em 0 .75em;
 		overflow: hidden;
 		border-top: 1px solid #ccc;
 
 		.protect,
 		.akismet {
-			width: 50%;
 			float: left;
 			text-align: left;
+			margin-bottom: .75em;
 		}
 
 		.protect {
 			padding-right: 3%;
+			min-width: 50%;
 		}
 
 		h3 {
